welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:4: error: not found: value colore
      colore()
      ^FlowerCase:9: error: not found: value colore
      colore()
      ^FlowerCase:13: error: not found: value colore
      colore()
      ^FlowerCase:17: error: not found: value colore
      colore()
      ^